[package]
name = "tomb"
version = "0.2.2"
edition = "2021"
authors = ["Gabriel Falcão <gabrielfalcao@protonmail.com>"]

[dependencies]
clap = { version = "2.33", features = ["wrap_help"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
regex = "1.5.4"
fnmatch-regex = "0.1.0"
chrono = {version = "0.4", features = ["serde", "wasmbind"]}
chrono-humanize = "0.2.1"
md5 = "*"
base64 = "0.13.0"
clipboard = "0.5.0"
console = "0.15.0"
crossterm = { version = "0.22", features=["serde"]}
mac-notification-sys = {version = "0.3", optional = true}
rand = {version = "0.8.4", features = ["std"]}
route-recognizer = "0.3.1"
rpassword = "5.0.1"
rust-crypto = "0.2.36"
shellexpand = "2.1.0"
thiserror = "1.0"
tui = {version = "0.16.0",features = ["crossterm", "serde"]}
#term-table = "1.3.2"
[dev-dependencies]
speculate = "0.1"
k9 = "0.11.1"

[features]
osx = ["mac-notification-sys"]
default = []

[lib]
name = "tomb"
path = "src/lib.rs"

[[bin]]
name = "tomb"
path = "src/cli.rs"
bench = false

# https://doc.rust-lang.org/cargo/reference/manifest.html